--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@eva-design/eva": "^1.2.0",
     "expo": "^35.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
@@ -15,8 +16,12 @@
     "react-native-gesture-handler": "~1.3.0",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "1.0.0-alpha.23",
+    "react-native-ui-kitten": "^4.2.0",
     "react-native-unimodules": "~0.5.4",
-    "react-native-web": "^0.11.7"
+    "react-native-web": "^0.11.7",
+    "react-redux": "^7.1.3",
+    "react-router-native": "^5.1.2",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
