--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-web": "^0.11.7",
     "react-redux": "^7.1.3",
     "react-router-native": "^5.1.2",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
