--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@eva-design/eva": "^1.2.0",
+    "date-fns": "^2.8.0",
     "expo": "^35.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "1.0.0-alpha.23",
