--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@eva-design/eva": "^1.2.0",
     "date-fns": "^2.8.0",
     "expo": "^35.0.0",
+    "expo-permissions": "^7.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
@@ -24,7 +25,8 @@
     "react-redux": "^7.1.3",
     "react-router-native": "^5.1.2",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "unique-names-generator": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
